finish core html, ready for styling

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,15 @@
         alt="Today I learned logo..."
       />
       <h1>Today I learned...</h1>
+      <button>Share a fact</button>
     </header>
     <form>
       <label>
         <input type="text" placeholder="Share a fact with the world..." />
       </label>
+      <span>200</span>
       <label>
-        <input type="text" placeholder="Trustworthy source..."/>
+        <input type="text" placeholder="Trustworthy source..." />
       </label>
       <label>
         <select>
@@ -48,9 +50,16 @@
       <section>
         <ul>
           <li>
-            "React is being developed by Meta (formerly facebook)"
-            <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-            <span>#technology#</span>
+            <p>
+              "React is being developed by Meta (formerly facebook)"
+              <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
+              <span>#technology#</span>
+            </p>
+            <div>
+              <button>👍 <strong>24</strong></button>
+              <button>🤯 <strong>9</strong></button>
+              <button>⛔️ <strong>4</strong></button>
+            </div>
           </li>
           <li>
             <p>
@@ -64,6 +73,11 @@
               >
               <span>#society#</span>
             </p>
+            <div>
+              <button>👍 <strong>11</strong></button>
+              <button>🤯 <strong>2</strong></button>
+              <button>⛔️ <strong>0</strong></button>
+            </div>
           </li>
         </ul>
       </section>
