--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Topic Forum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@200..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <img
         src="logo.png"
         height="68px"
@@ -15,7 +20,7 @@
       <h1>Today I learned...</h1>
       <button>Share a fact</button>
     </header>
-    <form>
+    <form class="fact-form">
       <label>
         <input type="text" placeholder="Share a fact with the world..." />
       </label>
@@ -49,11 +54,11 @@
       </aside>
       <section>
         <ul>
-          <li>
+          <li class="fact">
             <p>
               "React is being developed by Meta (formerly facebook)"
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span>#technology#</span>
+              <span class="tag">#technology#</span>
             </p>
             <div>
               <button>👍 <strong>24</strong></button>
@@ -61,7 +66,7 @@
               <button>⛔️ <strong>4</strong></button>
             </div>
           </li>
-          <li>
+          <li class="fact">
             <p>
               "Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
@@ -71,7 +76,7 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span>#society#</span>
+              <span class="tag">#society#</span>
             </p>
             <div>
               <button>👍 <strong>11</strong></button>
