--- a/src/index.html
+++ b/src/index.html
@@ -1,91 +1,112 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <!-- Meta and title information -->
-  <meta charset="UTF-8" />
-  <title>Topic Forum</title>
+  <head>
+    <!-- Meta and title information -->
+    <meta charset="UTF-8" />
+    <title>Topic Forum</title>
 
-  <!-- Importing fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@200..800&display=swap" rel="stylesheet" />
+    <!-- Importing fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Linking the CSS stylesheet -->
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-<!-- Header section with logo and share button -->
-<header class="header">
-  <div class="logo">
-    <img src="logo.png" height="68px" width="68px" alt="Today I learned logo" />
-    <h1>Today I learned</h1>
-  </div>
-  <button>Share a fact</button>
-</header>
-
-<!-- Form for sharing a fact -->
-<form class="fact-form">
-  <label>
-    <input type="text" placeholder="Share a fact with the world..." />
-  </label>
-  <span>200</span>
-  <label>
-    <input type="text" placeholder="Trustworthy source..." />
-  </label>
-  <label>
-    <select>
-      <option value="">Choose category</option>
-      <option value="technology">Technology</option>
-      <option value="science">Science</option>
-      <option value="finance">Finance</option>
-    </select>
-  </label>
-  <button>Post</button>
-</form>
-
-<!-- Main content area -->
-<main class="main">
-  <!-- Sidebar with category buttons -->
-  <aside>
-    <ul>
-      <li><button>All</button></li>
-      <li><button>Technology</button></li>
-      <li><button>Science</button></li>
-    </ul>
-  </aside>
-
-  <!-- Section for displaying facts -->
-  <section>
-    <ul>
-      <!-- Each fact is displayed in a list item -->
-      <li class="fact">
-        <p>
-          "React is being developed by Meta (formerly facebook)"
-          <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-        </p>
-        <span class="tag" style="background-color: #3b82f6">#technology#</span>
-        <div class="vote-buttons">
-          <button>👍 <strong>24</strong></button>
-          <button>🤯 <strong>9</strong></button>
-          <button>⛔️ <strong>4</strong></button>
+    <!-- Linking the CSS stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <!-- Header section with logo and share button -->
+      <header class="header">
+        <div class="logo">
+          <img src="logo.png" alt="Today I learned logo" />
+          <h1>Today I learned</h1>
         </div>
-      </li>
+        <button>Share a fact</button>
+      </header>
 
-      <!-- Another fact -->
-      <li class="fact">
-        <p>
-          "Millennial dads spend 3 times as much time with their kids than their fathers spent with them. In 1982, 43% of fathers had never changed a diaper. Today, that number is down to 3%."
-          <a href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids" target="_blank">(Source)</a>
-        </p>
-        <span class="tag" style="background-color: #eab308">#society#</span>
-        <div class="vote-buttons">
-          <button>👍 <strong>11</strong></button>
-          <button>🤯 <strong>2</strong></button>
-          <button>⛔️ <strong>0</strong></button>
-        </div>
-      </li>
-    </ul>
-  </section>
-</main>
-</body>
+      <!-- Form for sharing a fact -->
+      <form class="fact-form">
+        <label>
+          <input type="text" placeholder="Share a fact with the world..." />
+        </label>
+        <span>200</span>
+        <label>
+          <input type="text" placeholder="Trustworthy source..." />
+        </label>
+        <label>
+          <select>
+            <option value="">Choose category</option>
+            <option value="technology">Technology</option>
+            <option value="science">Science</option>
+            <option value="finance">Finance</option>
+          </select>
+        </label>
+        <button>Post</button>
+      </form>
+
+      <!-- Main content area -->
+      <main class="main">
+        <!-- Sidebar with category buttons -->
+        <aside>
+          <ul>
+            <li><button>All</button></li>
+            <li><button>Technology</button></li>
+            <li><button>Science</button></li>
+          </ul>
+        </aside>
+
+        <!-- Section for displaying facts -->
+        <section>
+          <ul>
+            <!-- Each fact is displayed in a list item -->
+            <li class="fact">
+              <p>
+                "React is being developed by Meta (formerly facebook)"
+                <a
+                  class="source"
+                  href="https://opensource.fb.com/"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #3b82f6"
+                >#technology#</span
+              >
+              <div class="vote-buttons">
+                <button>👍 <strong>24</strong></button>
+                <button>🤯 <strong>9</strong></button>
+                <button>⛔️ <strong>4</strong></button>
+              </div>
+            </li>
+
+            <!-- Another fact -->
+            <li class="fact">
+              <p>
+                "Millennial dads spend 3 times as much time with their kids than
+                their fathers spent with them. In 1982, 43% of fathers had never
+                changed a diaper. Today, that number is down to 3%."
+                <a
+                  class="source"
+                  href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #eab308"
+                >#society#</span
+              >
+              <div class="vote-buttons">
+                <button>👍 <strong>11</strong></button>
+                <button>🤯 <strong>2</strong></button>
+                <button>⛔️ <strong>0</strong></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
