more button styling with transform, transition, & rotate, color gradient

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
           <img src="logo.png" alt="Today I learned logo" />
           <h1>Today I learned</h1>
         </div>
-        <button>Share a fact</button>
+        <button class="btn btn-large">Share a fact</button>
       </header>
 
       <!-- Form for sharing a fact -->
@@ -44,7 +44,7 @@
             <option value="finance">Finance</option>
           </select>
         </label>
-        <button>Post</button>
+        <button class="btn btn-large">Post</button>
       </form>
 
       <!-- Main content area -->
@@ -52,9 +52,9 @@
         <!-- Sidebar with category buttons -->
         <aside>
           <ul>
-            <li><button>All</button></li>
-            <li><button>Technology</button></li>
-            <li><button>Science</button></li>
+            <li class="category"><button class="btn btn-all-categories">All</button></li>
+            <li class="category"><button class="btn btn-category" style="background-color: #3b82f6">Technology</button></li>
+            <li class="category"><button class="btn btn-category" style="background-color:#16a34a ">Science</button></li>
           </ul>
         </aside>
 
